Add target="_blank" for links in "services" page

--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
         <h2 class="catalog__title">Все сервисы</h2>
         <div class="catalog__content">
           <article class="catalog__item">
-            <a class="card" href="https://my.mai.ru/lk_student">
+            <a class="card" href="https://my.mai.ru/lk_student" target="_blank">
               <div class="card__icon-wrapper" title="Сайт">
                 <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
                   <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
@@ -73,7 +73,7 @@
             </a>
           </article>
           <article class="catalog__item">
-            <a class="card" href="https://mail.mai.education">
+            <a class="card" href="https://mail.mai.education" target="_blank">
               <div class="card__icon-wrapper" title="Сайт">
                 <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
                   <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
@@ -87,7 +87,7 @@
             </a>
           </article>
           <article class="catalog__item">
-            <a class="card" href="https://lms.mai.ru">
+            <a class="card" href="https://lms.mai.ru" target="_blank">
               <div class="card__icon-wrapper" title="Сайт">
                 <svg width="100px" height="100px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
                   <polyline points="8.25 2.75,2.75 2.75,2.75 13.25,13.25 13.25,13.25 7.75"/>
@@ -101,7 +101,7 @@
             </a>
           </article>
           <article class="catalog__item">
-            <a class="card card--telegram" href="https://t.me/mai_timetablebot">
+            <a class="card card--telegram" href="https://t.me/mai_timetablebot" target="_blank">
               <div class="card__icon-wrapper" title="Telegram">
                 <svg width="100px" height="100px" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <defs>
@@ -124,7 +124,7 @@
             </a>
           </article>
           <article class="catalog__item">
-            <a class="card card--telegram" href="https://t.me/Timetable_MAI_bot">
+            <a class="card card--telegram" href="https://t.me/Timetable_MAI_bot" target="_blank">
               <div class="card__icon-wrapper" title="Telegram">
                 <svg width="100px" height="100px" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <defs>
@@ -147,7 +147,7 @@
             </a>
           </article>
           <article class="catalog__item">
-            <a class="card card--telegram" href="https://t.me/maiuniversity_schedule_bot">
+            <a class="card card--telegram" href="https://t.me/maiuniversity_schedule_bot" target="_blank">
               <div class="card__icon-wrapper" title="Telegram">
                 <svg width="100px" height="100px" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <defs>
@@ -177,7 +177,7 @@
         <h2 class="resources__title">Ресурсы</h2>
         <ul class="resources__list">
           <li class="resources__item">
-            <a class="resources__link" title="Telegram" href="https://t.me/mai_library">
+            <a class="resources__link" title="Telegram" href="https://t.me/mai_library" target="_blank">
               <svg width="100px" height="100px" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                   <circle id="Oval" fill="#ffffff" cx="500" cy="500" r="500"></circle>
@@ -187,7 +187,7 @@
             </a>
           </li>
           <li class="resources__item">
-            <a class="resources__link" title="GitHub" href="https://github.com/iannsgirdye/mai_library">
+            <a class="resources__link" title="GitHub" href="https://github.com/iannsgirdye/mai_library" target="_blank">
               <svg width="48" height="47" viewBox="0 0 48 47" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_297_142)">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M23.9285 0C10.6967 0 0 10.7708 0 24.0958C0 34.7472 6.85371 43.7634 16.3616 46.9545C17.5504 47.1944 17.9858 46.436 17.9858 45.7981C17.9858 45.2395 17.9466 43.3247 17.9466 41.3296C11.2903 42.7661 9.90416 38.4573 9.90416 38.4573C8.83445 35.6647 7.24947 34.9469 7.24947 34.9469C5.07086 33.4709 7.40816 33.4709 7.40816 33.4709C9.82482 33.6305 11.0929 35.9442 11.0929 35.9442C13.2318 39.6141 16.6785 38.5772 18.0651 37.9388C18.263 36.3829 18.8973 35.3058 19.5708 34.7075C14.2619 34.1489 8.67625 32.0746 8.67625 22.819C8.67625 20.186 9.62645 18.0318 11.1321 16.3565C10.8945 15.7582 10.0624 13.2844 11.3701 9.9733C11.3701 9.9733 13.3905 9.33489 17.9461 12.4467C19.8965 11.9192 21.908 11.6509 23.9285 11.6487C25.9489 11.6487 28.0085 11.9282 29.9104 12.4467C34.4665 9.33489 36.4869 9.9733 36.4869 9.9733C37.7946 13.2844 36.962 15.7582 36.7244 16.3565C38.2697 18.0318 39.1807 20.186 39.1807 22.819C39.1807 32.0746 33.5951 34.1088 28.2465 34.7075C29.1184 35.4654 29.8707 36.9014 29.8707 39.1755C29.8707 42.4067 29.8315 45.0001 29.8315 45.7976C29.8315 46.436 30.2674 47.1944 31.4557 46.955C40.9636 43.7629 47.8173 34.7472 47.8173 24.0958C47.8565 10.7708 37.1207 0 23.9285 0Z" fill="white"/>
@@ -202,7 +202,7 @@
           </li>
           <li class="resources__item">
             <a 
-              class="resources__link" title="Вклады людей в проект"
+              class="resources__link" title="Вклады людей в проект" target="_blank"
               href="https://docs.google.com/spreadsheets/d/1Vh6gqDomF5zCN3raRgMZ6qr3p6keeTBc7Z3VQ8KqPLw/edit?usp=sharing"
             >
               <svg fill="#ffffff" width="100px" height="100px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
