--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logo" href="/">
+      <a class="header__logo" href="./index.html">
         <span class="header__logo-title">mai_library</span>
         <span class="header__logo-description">Сборник материалов для маёвца</span>
       </a>
@@ -20,32 +20,32 @@
           <div class="burger__list-wrapper">
             <ul class="burger__list">
               <li class="burger__item">
-                <a class="burger__link" href="/">Сервисы</a>
+                <a class="burger__link" href="./services.html">Сервисы</a>
               </li>
               <li class="burger__item">
-                <a class="burger__link" href="/">Организации</a>
+                <a class="burger__link" href="./organizations.html">Организации</a>
               </li>
               <li class="burger__item">
                 <a class="burger__link" href="/">Справочники</a>
               </li>
               <li class="burger__item">
-                <a class="burger__link" href="/">Самообразование</a>
+                <a class="burger__link" href="./self-education.html">Самообразование</a>
               </li>
             </ul>
           </div>
         </div>
         <ul class="header__menu-list">
           <li class="header__menu-item">
-            <a class="header__menu-link" href="/">Сервисы</a>
+            <a class="header__menu-link" href="./services.html">Сервисы</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link" href="/">Организации</a>
+            <a class="header__menu-link" href="./organizations.html">Организации</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="/">Справочники</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link" href="/">Самообразование</a>
+            <a class="header__menu-link" href="./self-education.html">Самообразование</a>
           </li>
         </ul>
       </nav>
@@ -64,7 +64,7 @@
         <nav class="menu__content">
           <ul class="menu__content-list">
             <li class="menu__content-item">
-              <a class="menu-card" href="/">
+              <a class="menu-card" href="./services.html">
                 <svg width="100px" height="100px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6 13C6.55 13 7 12.55 7 12C7 11.45 6.55 11 6 11C5.45 11 5 11.45 5 12C5 12.55 5.45 13 6 13Z" stroke="#000000" stroke-width="2"/>
                   <path d="M6 7C6.55 7 7 6.55 7 6C7 5.45 6.55 5 6 5C5.45 5 5 5.45 5 6C5 6.55 5.45 7 6 7Z" stroke="#000000" stroke-width="2"/>
@@ -81,7 +81,7 @@
               </a>
             </li>
             <li class="menu__content-item">
-              <a class="menu-card" href="/">
+              <a class="menu-card" href="./organizations.html">
                 <svg width="100px" height="100px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M16 6C14.3432 6 13 7.34315 13 9C13 10.6569 14.3432 12 16 12C17.6569 12 19 10.6569 19 9C19 7.34315 17.6569 6 16 6ZM11 9C11 6.23858 13.2386 4 16 4C18.7614 4 21 6.23858 21 9C21 10.3193 20.489 11.5193 19.6542 12.4128C21.4951 13.0124 22.9176 14.1993 23.8264 15.5329C24.1374 15.9893 24.0195 16.6114 23.5631 16.9224C23.1068 17.2334 22.4846 17.1155 22.1736 16.6591C21.1979 15.2273 19.4178 14 17 14C13.166 14 11 17.0742 11 19C11 19.5523 10.5523 20 10 20C9.44773 20 9.00001 19.5523 9.00001 19C9.00001 18.308 9.15848 17.57 9.46082 16.8425C9.38379 16.7931 9.3123 16.7323 9.24889 16.6602C8.42804 15.7262 7.15417 15 5.50001 15C3.84585 15 2.57199 15.7262 1.75114 16.6602C1.38655 17.075 0.754692 17.1157 0.339855 16.7511C-0.0749807 16.3865 -0.115709 15.7547 0.248886 15.3398C0.809035 14.7025 1.51784 14.1364 2.35725 13.7207C1.51989 12.9035 1.00001 11.7625 1.00001 10.5C1.00001 8.01472 3.01473 6 5.50001 6C7.98529 6 10 8.01472 10 10.5C10 11.7625 9.48013 12.9035 8.64278 13.7207C9.36518 14.0785 9.99085 14.5476 10.5083 15.0777C11.152 14.2659 11.9886 13.5382 12.9922 12.9945C11.7822 12.0819 11 10.6323 11 9ZM3.00001 10.5C3.00001 9.11929 4.1193 8 5.50001 8C6.88072 8 8.00001 9.11929 8.00001 10.5C8.00001 11.8807 6.88072 13 5.50001 13C4.1193 13 3.00001 11.8807 3.00001 10.5Z" fill="#000000"/>
                 </svg>
@@ -100,7 +100,7 @@
               </a>
             </li>
             <li class="menu__content-item">
-              <a class="menu-card" href="/">
+              <a class="menu-card" href="./self-education.html">
                 <svg width="100px" height="100px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M4 19V6.2C4 5.0799 4 4.51984 4.21799 4.09202C4.40973 3.71569 4.71569 3.40973 5.09202 3.21799C5.51984 3 6.0799 3 7.2 3H16.8C17.9201 3 18.4802 3 18.908 3.21799C19.2843 3.40973 19.5903 3.71569 19.782 4.09202C20 4.51984 20 5.0799 20 6.2V17H6C4.89543 17 4 17.8954 4 19ZM4 19C4 20.1046 4.89543 21 6 21H20M9 7H15M9 11H15M19 17V21" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
@@ -117,7 +117,7 @@
         <h2 class="resources__title">Ресурсы</h2>
         <ul class="resources__list">
           <li class="resources__item">
-            <a class="resources__link" title="Telegram" href="https://t.me/mai_library">
+            <a class="resources__link" title="Telegram" href="https://t.me/mai_library" target="_blank">
               <svg width="100px" height="100px" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                   <circle id="Oval" fill="#ffffff" cx="500" cy="500" r="500"></circle>
@@ -127,7 +127,7 @@
             </a>
           </li>
           <li class="resources__item">
-            <a class="resources__link" title="GitHub" href="https://github.com/iannsgirdye/mai_library">
+            <a class="resources__link" title="GitHub" href="https://github.com/iannsgirdye/mai_library" target="_blank">
               <svg width="48" height="47" viewBox="0 0 48 47" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_297_142)">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M23.9285 0C10.6967 0 0 10.7708 0 24.0958C0 34.7472 6.85371 43.7634 16.3616 46.9545C17.5504 47.1944 17.9858 46.436 17.9858 45.7981C17.9858 45.2395 17.9466 43.3247 17.9466 41.3296C11.2903 42.7661 9.90416 38.4573 9.90416 38.4573C8.83445 35.6647 7.24947 34.9469 7.24947 34.9469C5.07086 33.4709 7.40816 33.4709 7.40816 33.4709C9.82482 33.6305 11.0929 35.9442 11.0929 35.9442C13.2318 39.6141 16.6785 38.5772 18.0651 37.9388C18.263 36.3829 18.8973 35.3058 19.5708 34.7075C14.2619 34.1489 8.67625 32.0746 8.67625 22.819C8.67625 20.186 9.62645 18.0318 11.1321 16.3565C10.8945 15.7582 10.0624 13.2844 11.3701 9.9733C11.3701 9.9733 13.3905 9.33489 17.9461 12.4467C19.8965 11.9192 21.908 11.6509 23.9285 11.6487C25.9489 11.6487 28.0085 11.9282 29.9104 12.4467C34.4665 9.33489 36.4869 9.9733 36.4869 9.9733C37.7946 13.2844 36.962 15.7582 36.7244 16.3565C38.2697 18.0318 39.1807 20.186 39.1807 22.819C39.1807 32.0746 33.5951 34.1088 28.2465 34.7075C29.1184 35.4654 29.8707 36.9014 29.8707 39.1755C29.8707 42.4067 29.8315 45.0001 29.8315 45.7976C29.8315 46.436 30.2674 47.1944 31.4557 46.955C40.9636 43.7629 47.8173 34.7472 47.8173 24.0958C47.8565 10.7708 37.1207 0 23.9285 0Z" fill="white"/>
@@ -142,7 +142,7 @@
           </li>
           <li class="resources__item">
             <a 
-              class="resources__link" title="Вклады людей в проект"
+              class="resources__link" title="Вклады людей в проект" target="_blank"
               href="https://docs.google.com/spreadsheets/d/1Vh6gqDomF5zCN3raRgMZ6qr3p6keeTBc7Z3VQ8KqPLw/edit?usp=sharing"
             >
               <svg fill="#ffffff" width="100px" height="100px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
