--- a/manuals.html
+++ b/manuals.html
@@ -49,7 +49,13 @@
           </li>
         </ul>
       </nav>
-    </header>  
+    </header>
+    <main>
+      <section class="about">
+        <h1 class="about__title">Справочники</h1>
+        <p class="about__content">Статьи для решения различных вопросов</p>
+      </section>
+    </main>
     <footer class="footer">
       <section class="resources">
         <h2 class="resources__title">Ресурсы</h2>
