--- a/organizations.html
+++ b/organizations.html
@@ -26,7 +26,7 @@
                 <a class="burger__link burger__link--active" href="./organizations.html">Организации</a>
               </li>
               <li class="burger__item">
-                <a class="burger__link" href="/">Справочники</a>
+                <a class="burger__link" href="./manuals.html">Справочники</a>
               </li>
               <li class="burger__item">
                 <a class="burger__link" href="./self-education.html">Самообразование</a>
@@ -42,7 +42,7 @@
             <a class="header__menu-link header__menu-link--active" href="./organizations.html">Организации</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link" href="/">Справочники</a>
+            <a class="header__menu-link" href="./manuals.html">Справочники</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="./self-education.html">Самообразование</a>
