Add "about" section markup in "exams" manual

--- a/manuals/exams.html
+++ b/manuals/exams.html
@@ -50,5 +50,13 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="about">
+        <h1 class="about__title">Справочник: экзамены</h1>
+        <p class="about__content">
+          Как и в каких случаях можно продлить сессию, как подать апелляцию в случае несогласия с оценкой за экзамен
+        </p>
+      </section>
+    </main>
   </body>
 </html>
