Add "manual" section markup in "exams" manual

--- a/manuals/exams.html
+++ b/manuals/exams.html
@@ -57,6 +57,27 @@
           Как и в каких случаях можно продлить сессию, как подать апелляцию в случае несогласия с оценкой за экзамен
         </p>
       </section>
+      <section class="manual">
+        <article class="manual-part">
+          <h2 class="manual-part__title">Продление сессии</h2>
+          <div class="manual-part__content">
+            <ol>
+              <li>Собрать документы, подтверждающие уважительную причину продления сессии.</li>
+              <li>В течение трёх рабочих дней после выдачи документов придти в учебный отдел и написать заявление на продление сессии.</li>
+            </ol>
+            <p><b>Примечание.</b> В период действия справки пропускаются все экзамены.</em>
+          </div>
+        </article>
+        <article class="manual-part">
+          <h2 class="manual-part__title">Апеляции</h2>
+          <div class="manual-part__content">
+            <p>
+              Обучающиеся, не согласные с оценкой, в течение двух рабочих дней после объявления
+              результатов аттестации могут подать письменную апелляцию в Дирекцию института.
+            </p>
+          </div>
+        </article>
+      </section>
     </main>
   </body>
 </html>
