--- a/manuals/union.html
+++ b/manuals/union.html
@@ -8,6 +8,47 @@
     <link rel="stylesheet" href="../styles.css"/>
   </head>
   <body>
-
+    <header class="header">
+      <a class="header__logo" href="../index.html">
+        <span class="header__logo-title">mai_library</span>
+        <span class="header__logo-description">Сборник материалов для маёвца</span>
+      </a>
+      <nav class="header__menu">
+        <div class="burger">
+          <input class="burger__checkbox" id="burger-checkbox" type="checkbox"/>
+          <label class="burger__label" for="burger-checkbox"></label>
+          <div class="burger__list-wrapper">
+            <ul class="burger__list">
+              <li class="burger__item">
+                <a class="burger__link" href="../services.html">Сервисы</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link" href="../organizations.html">Организации</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link burger__link--active" href="../manuals.html">Справочники</a>
+              </li>
+              <li class="burger__item">
+                <a class="burger__link" href="../self-education.html">Самообразование</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <ul class="header__menu-list">
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="../services.html">Сервисы</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="../organizations.html">Организации</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link header__menu-link--active" href="../manuals.html">Справочники</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="../self-education.html">Самообразование</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
