--- a/manuals/exits.html
+++ b/manuals/exits.html
@@ -50,6 +50,12 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="about">
+        <h1 class="about__title">Справочник: отчисления и академический отпуск</h1>
+        <p class="about__content">Как и когда можно прекратить или приостановить обучение</p>
+      </section>
+    </main>
     <footer class="footer">
       <section class="resources">
         <h2 class="resources__title">Ресурсы</h2>
