Add "about" section markup in "money" manual

--- a/manuals/money.html
+++ b/manuals/money.html
@@ -50,6 +50,12 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="about">
+        <h1 class="about__title">Справочник: деньги</h1>
+        <p class="about__content">Как и какие денежные средства можно получить от вуза</p>
+      </section>
+    </main>
     <footer class="footer">
       <section class="resources">
         <h2 class="resources__title">Ресурсы</h2>
