Add "about" section markup in "union" manual

--- a/manuals/union.html
+++ b/manuals/union.html
@@ -50,6 +50,15 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="about">
+        <h1 class="about__title">Справочник: Профсоюз</h1>
+        <p class="about__content">
+          Преимущества и обязаности членов Профсоюза, алгоритмы вступления в Профсоюз и выхода из него,
+          выбор и обязанности профорга
+        </p>
+      </section>
+    </main>
     <footer class="footer">
       <section class="resources">
         <h2 class="resources__title">Ресурсы</h2>
