Add "manual" section markup in "exits" manual

--- a/manuals/exits.html
+++ b/manuals/exits.html
@@ -55,6 +55,52 @@
         <h1 class="about__title">Справочник: отчисления и академический отпуск</h1>
         <p class="about__content">Как и когда можно прекратить или приостановить обучение</p>
       </section>
+      <section class="manual">
+        <article class="manual-part">
+          <h2 class="manual-part__title">Виды отчислений</h2>
+          <div class="manual-part__content">
+            <ul>
+              <li>По уважительной причине</li>
+              <li>По неуважительной причине</li>
+              <li>По другим причинам</li>
+            </ul>
+          </div>
+        </article>
+        <article class="manual-part">
+          <h2 class="manual-part__title">Академический отпуск</h2>
+          <div class="manual-part__content">
+            <ul>
+              <li>
+                Требуется заявление и один из документов:
+                <ul>
+                  <li>врачебное заключение;</li>
+                  <li>повестка;</li>
+                  <li>семейные обстоятельства;</li>
+                  <li>другие.</li>
+                </ul>
+              </li>
+              <li>
+                Выдаётся сроком от одного до двух лет включительно.
+              </li>
+              <li>
+                В течение 10 дней перед возвращением нужно написать заявление о выходе из академического отпуска.
+              </li>
+              <li>
+                На время академического отпуска:
+                <ul>
+                  <li>блокируется пропуск;</li>
+                  <li>учёба прекращается;</li>
+                  <li>деньги за обучение не списываются (если студент на платном обучении).</li>
+                </ul>
+              </li>
+              <li>
+                Решение о предоставлении академического отпуска принимается ректором или деканом.
+                В течении 10 дней оформляется приказ.
+              </li>
+            </ul>
+          </div>
+        </article>
+      </section>
     </main>
     <footer class="footer">
       <section class="resources">
