--- a/manuals/money.html
+++ b/manuals/money.html
@@ -55,6 +55,133 @@
         <h1 class="about__title">Справочник: деньги</h1>
         <p class="about__content">Как и какие денежные средства можно получить от вуза</p>
       </section>
+      <section class="manual">
+        <article class="manual-part">
+          <h2 class="manual-part__title">Стипендии</h2>
+          <div class="manual-part__content">
+            <div>
+              <h3>Ресурсы</h3>
+              <ul>
+                <li><a class="link" href="https://mai.ru/education/studies/scholarship">Страница №1 на сайте МАИ</a></li>
+                <li><a class="link" href="https://mai.ru/sveden/grants">Страница №2 на сайте МАИ</a></li>
+                <li><a class="link" href="https://www.mos.ru/otvet-obrazovanie/kakie-stipendii-posobiya-i-lgoty-mogut-poluchit-studenty">Страница на сайте Госуслуг Москвы</a></li>
+              </ul>
+            </div>
+            <table>
+              <caption>Виды</caption>
+              <thead>
+                <tr>
+                  <th>Тип</th>
+                  <th>Подвиды / Особенности</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td rowspan="6">Государственные академические</td>
+                  <td rowspan="1" colspan="2">Обычная</td>
+                </tr>
+                <tr>
+                  <td rowspan="5">Повышенная</td>
+                  <td>учебная <em>(через дирекцию Института)</em></td>
+                </tr>
+                <tr>
+                  <td>научно-исследовательская <em>(через национально исследовательский отдел Института)</em></td>
+                </tr>
+                <tr>
+                  <td>общественная <em>(через Профбюро Института)</em></td>
+                </tr>
+                <tr>
+                  <td>культурно-творческая <em>(через Профбюро Института)</em></td>
+                </tr>
+                <tr>
+                  <td>спортивная <em>(через своего тренера)</em></td>
+                </tr>
+                <tr>
+                  <td rowspan="2">Государственные социальные</td>
+                  <td colspan="2">Обычная</td>
+                </tr>
+                <tr>
+                  <td rowspan="2">Повышенная, которую могут получать:
+                    <ul>
+                      <li>обучающиеся по очной форме обучения за счёт бюджетных ассигнований федерального бюджета</li>
+                      <li>сдавшие экзамены и зачёты без троек и не имеющие академические задолженности</li>
+                      <li>лица, имеющие право на получение государственной социальной стипендии</li>
+                    </ul>
+                  </td>
+                </tr>
+                <tr>
+                  <td rowspan="3">Именные</td>
+                  <td colspan="2">Президента РФ</td>
+                </tr>
+                <tr>
+                  <td colspan="2">Правительства РФ</td>
+                </tr>
+                <tr>
+                  <td colspan="2">Правительства Москвы</td>
+                </tr>
+                <tr>
+                  <td>От компаний</td>
+                  <td rowspan="2">например, от "Т-Банка" (подробно на их сайте)</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </article>
+        <article class="manual-part">
+          <h2 class="manual-part__title">Материальная поддержка</h2>
+          <div class="manual-part__content">
+            <p>
+              Материальная поддержка — особая социальная выплата студенту в качестве помощи при особых жизненных
+              обстоятельствах. Существует 3 вида материальной помощи, которые не зависят друг от друга.
+            </p>
+            <p>
+              <h3>1️⃣ Остронуждающимся студентам <em>(АПОС, "3600")</em></h3>
+              <ul>
+                <li>Могут получать все студенты вне зависимости от членства в Профсоюзе.</li>
+                <li>
+                  Размер выплаты составляет 3600 рублей, не зависит от категории и выплачивается 1 раз
+                  в квартал на карты платёжной системы "МИР".
+                </li>
+                <li>Пакет документов можно подать лично сотруднику Профбюро или оставить в ящике на двери кабинета.</li>
+                <li>Подробно <a class="link" href="https://mai.ru/campus/360/welfare">на сайте МАИ</a>.</li>
+              </ul>
+            </p>
+            <p>
+              <h3>2️⃣ Обучающимся МАИ <em>("большая")</em></h3>
+              <ul>
+                <li>Могут получать все студенты вне зависимости от членства в Профсоюзе.</li>
+                <li>Размер выплаты зависит от категории, выплачивается 1 раз в семестр.</li>
+                <li>Заявление можно подать только лично сотруднику Профбюро, так как необходима регистрация в журнале подачи.</li>
+                <li>Подробно <a class="link" href="https://mai.ru/campus/360/welfare">на сайте МАИ</a>.</li>
+              </ul>
+            </p>
+            <p>
+              <h3>3️⃣ Членам Профсоюза</h3>
+              <ul>
+                <li>Могут получать только студенты, состоящие в Профсоюзе. Особенно актуальна для тех, кто попал в тяжёлые непредвиденные обстоятельства. </li>
+                <li>Сумма выплаты зависит от категории. </li>
+                <li>Заявления и документы принимает бухгалтерия Профкома МАИ.</li>
+                <li>Подробно <a class="link" href="https://vk.com/@profkom_mai-vse-pro-materialnuu-pomosch">в статье в сообществе ВКонтакте Профкома МАИ</a>.</li>
+              </ul>
+            </p>
+            <p>
+              <h3>📖 Алгоритмы получения</h3>
+              <ul>
+                <li>
+                  <b>"3600" и "большая":</b>
+                  <ol>
+                    <li>Подписаться на социальные сети Профбюро Института и следить за постами.</li>
+                    <li>Увидеть замечательный пост о том, что начался приём документов на материальную поддержку.</li>
+                    <li>Принести в Профбюро Института заявление, корректно заполненное синей ручкой, и чёткие копии документов.</li>
+                    <li>Радоваться жизни и ждать, пока выйдет приказ, в следующем месяце (относительно выхода приказа) в день выплаты стипендии Вам придёт материальная поддержка.</li>
+                  </ol>
+                </li>
+                <li><b>Членам Профсоюза</a>:</b> обратиться к сотрудникам социальной комиссии.</li>
+              </ul>
+            </p>
+          </div>
+        </article>
+      </section>
     </main>
     <footer class="footer">
       <section class="resources">
