Add "manual" section markup in "union" manual

--- a/manuals/union.html
+++ b/manuals/union.html
@@ -58,6 +58,90 @@
           выбор и обязанности профорга
         </p>
       </section>
+      <section class="manual">
+        <article class="manual-part">
+          <h2 class="manual-part__title">Преимущества членов Профсоюза</h2>
+          <div class="manual-part__content">
+            <ul>
+              <li>Обеспечение защиты индивидуальных и студенческих прав</li>
+              <li>Возможность участвовать в выездных мероприятиях и получать призы</li>
+              <li>Право на получение индивидуальной материальной поддержки как члену Профсоюза</li>
+              <li>Участие в программе лояльности Profcards</li>
+              <li>Возможность стать активистом или сотрудником Профбюро или Профкома</li>
+              <li>Поддержка талантов Профкомом</li>
+              <li>Приобретение новых знакомств и личностное развитие</li>
+            </ul>
+          </div>
+        </article>
+        <article class="manual-part">
+          <h2 class="manual-part__title">Обязанности членов Профсоюза</h2>
+          <div class="manual-part__content">
+            <ul>
+              <li>
+                <b>Продление Профсоюзного билета.</b>
+                Необходимо уплачивать взносы в размере 3% от стипендии, если ты её получаешь
+                (сумма высчитывается и снимается автоматически), или, если не получаешь,
+                в размере 8 рублей в месяц или 48 рублей за семестр.
+              </li>
+              <li>
+                <b>Участие в выборах исполнительных органов организации.</b>
+                На каждую отчётно-выборную конференцию профгруппа должна выдвинуть делегата,
+                который будет выражать мнение всей группы по повестке,
+                а также на голосовании за председателя и состав Профбюро.
+              </li>
+            </ul>
+          </div>
+        </article>
+        <article class="manual-part">
+          <h2 class="manual-part__title">Алгоритм вступления в Профсоюз</h2>
+          <div class="manual-part__content">
+            <ol>
+              <li>Получить у сотрудника Профбюро бланк заявления о вступлении в Профсоюз.</li>
+              <li>Заполнить бланк заявления о вступлении в Профсоюз.</li>
+              <li>Сдать сотруднику Профбюро бланк заявления о вступлении в Профсоюз.</li>
+              <li>Оплатить профвзнос (8 рублей для получающих и 48 рублей для не получающих стипендию).</li>
+              <li>Получить у сотрудника Профбюро ссылку на гугл-форму.</li>
+              <li>Заполнить-гугл форму (нужна для учёта членов Профсоюза и ведения статистики).</li>
+              <li>Получить электронный профсоюзный билет (его производство занимает некоторое время, поэтому как только карточка окажется у сотрудников Профбюро, они свяжутся с Вами).</li>
+            </ol>
+            <p>Студент считается членом Профсоюза с момента написания заявления о вступлении в Профсоюз и оплаты профвзноса.</p>
+          </div>
+        </article>
+        <article class="manual-part">
+          <h2 class="manual-part__title">Алгоритм выхода из Профсоюза</h2>
+          <div class="manual-part__content">
+            <ol>
+              <li>Нужно иметь продлённый билет. При вступлении в Профсоюз вы обязуетесь уплачивать профвзносы, даже если Вы не пользуетесь предоставленными Вам возможностями.</li>
+              <li>Получить у сотрудника Профбюро бланк заявления о выходе из Профсоюза.</li>
+              <li>Заполнить бланк заявления о выходе из Профсоюза.</li>
+              <li>Сдать сотруднику Профбюро бланк заявления о выходе из Профсоюза.</li>
+            </ol>
+            <p>При выходе из Профсоюза обратное вступление возможно только через 18 месяцев.</p>
+          </div>
+        </article>
+        <article class="manual-part">
+          <h2 class="manual-part__title">Выбор профорга</h2>
+          <div class="manual-part__content">
+            <p>
+              В каждой группе, где есть минимум 3 студента, состоящих в Профсоюзе, должен быть избран профорг. 
+              При необходимости профорга можно поменять путём перевыборов.
+            </p>
+          </div>
+        </article>
+        <article class="manual-part">
+          <h2 class="manual-part__title">Обязанности профорга</h2>
+          <div class="manual-part__content">
+            <ul>
+              <li>
+                Своевременное продление профбилетов студентов группы: 
+                сбор профвзносов, заполнение ведомости, учёт студентов, получающих и не получающих стипендию
+              </li>
+              <li>Передача информации от группы сотрудникам Профбюро</li>
+              <li>Передача информации от сотрудников Профбюро студентам группы</li>
+            </ul>
+          </div>
+        </article>
+      </section>
     </main>
     <footer class="footer">
       <section class="resources">
