Fix table markup in "money" manual

--- a/manuals/money.html
+++ b/manuals/money.html
@@ -77,31 +77,27 @@
               </thead>
               <tbody>
                 <tr>
-                  <td rowspan="6">Государственные академические</td>
-                  <td rowspan="1" colspan="2">Обычная</td>
+                  <td rowspan="2">Государственные академические</td>
+                  <td>Обычная</td>
                 </tr>
                 <tr>
-                  <td rowspan="5">Повышенная</td>
-                  <td>учебная <em>(через дирекцию Института)</em></td>
-                </tr>
-                <tr>
-                  <td>научно-исследовательская <em>(через национально исследовательский отдел Института)</em></td>
-                </tr>
-                <tr>
-                  <td>общественная <em>(через Профбюро Института)</em></td>
-                </tr>
-                <tr>
-                  <td>культурно-творческая <em>(через Профбюро Института)</em></td>
-                </tr>
-                <tr>
-                  <td>спортивная <em>(через своего тренера)</em></td>
+                  <td>
+                    Повышенная:
+                    <ul>
+                      <li>учебная <em>(через дирекцию Института)</em></li>
+                      <li>научно-исследовательская <em>(через национально исследовательский отдел Института)</em></li>
+                      <li>общественная <em>(через Профбюро Института)</em></li>
+                      <li>культурно-творческая <em>(через Профбюро Института)</em></li>
+                      <li>спортивная <em>(через своего тренера)</em></li>
+                    </ul>
+                  </td>
                 </tr>
                 <tr>
                   <td rowspan="2">Государственные социальные</td>
-                  <td colspan="2">Обычная</td>
+                  <td>Обычная</td>
                 </tr>
                 <tr>
-                  <td rowspan="2">Повышенная, которую могут получать:
+                  <td>Повышенная, которую могут получать:
                     <ul>
                       <li>обучающиеся по очной форме обучения за счёт бюджетных ассигнований федерального бюджета</li>
                       <li>сдавшие экзамены и зачёты без троек и не имеющие академические задолженности</li>
@@ -111,17 +107,17 @@
                 </tr>
                 <tr>
                   <td rowspan="3">Именные</td>
-                  <td colspan="2">Президента РФ</td>
+                  <td>Президента РФ</td>
                 </tr>
                 <tr>
-                  <td colspan="2">Правительства РФ</td>
+                  <td>Правительства РФ</td>
                 </tr>
                 <tr>
-                  <td colspan="2">Правительства Москвы</td>
+                  <td>Правительства Москвы</td>
                 </tr>
                 <tr>
                   <td>От компаний</td>
-                  <td rowspan="2">например, от "Т-Банка" (подробно на их сайте)</td>
+                  <td>Например, от "Т-Банка" (подробно на сайтах компаний)</td>
                 </tr>
               </tbody>
             </table>
