--- a/manuals/money.html
+++ b/manuals/money.html
@@ -126,11 +126,11 @@
         <article class="manual-part">
           <h2 class="manual-part__title">Материальная поддержка</h2>
           <div class="manual-part__content">
-            <p>
+            <div>
               Материальная поддержка — особая социальная выплата студенту в качестве помощи при особых жизненных
               обстоятельствах. Существует 3 вида материальной помощи, которые не зависят друг от друга.
-            </p>
-            <p>
+            </div>
+            <div>
               <h3>1️⃣ Остронуждающимся студентам <em>(АПОС, "3600")</em></h3>
               <ul>
                 <li>Могут получать все студенты вне зависимости от членства в Профсоюзе.</li>
@@ -141,8 +141,8 @@
                 <li>Пакет документов можно подать лично сотруднику Профбюро или оставить в ящике на двери кабинета.</li>
                 <li>Подробно <a class="link" href="https://mai.ru/campus/360/welfare">на сайте МАИ</a>.</li>
               </ul>
-            </p>
-            <p>
+            </div>
+            <div>
               <h3>2️⃣ Обучающимся МАИ <em>("большая")</em></h3>
               <ul>
                 <li>Могут получать все студенты вне зависимости от членства в Профсоюзе.</li>
@@ -150,8 +150,8 @@
                 <li>Заявление можно подать только лично сотруднику Профбюро, так как необходима регистрация в журнале подачи.</li>
                 <li>Подробно <a class="link" href="https://mai.ru/campus/360/welfare">на сайте МАИ</a>.</li>
               </ul>
-            </p>
-            <p>
+            </div>
+            <div>
               <h3>3️⃣ Членам Профсоюза</h3>
               <ul>
                 <li>Могут получать только студенты, состоящие в Профсоюзе. Особенно актуальна для тех, кто попал в тяжёлые непредвиденные обстоятельства. </li>
@@ -159,8 +159,8 @@
                 <li>Заявления и документы принимает бухгалтерия Профкома МАИ.</li>
                 <li>Подробно <a class="link" href="https://vk.com/@profkom_mai-vse-pro-materialnuu-pomosch">в статье в сообществе ВКонтакте Профкома МАИ</a>.</li>
               </ul>
-            </p>
-            <p>
+            </div>
+            <div>
               <h3>📖 Алгоритмы получения</h3>
               <ul>
                 <li>
@@ -174,7 +174,7 @@
                 </li>
                 <li><b>Членам Профсоюза</a>:</b> обратиться к сотрудникам социальной комиссии.</li>
               </ul>
-            </p>
+            </div>
           </div>
         </article>
       </section>
