Fix table overflow

--- a/manuals/money.html
+++ b/manuals/money.html
@@ -67,60 +67,62 @@
                 <li><a class="link" href="https://www.mos.ru/otvet-obrazovanie/kakie-stipendii-posobiya-i-lgoty-mogut-poluchit-studenty">Страница на сайте Госуслуг Москвы</a></li>
               </ul>
             </div>
-            <table>
-              <caption>Виды</caption>
-              <thead>
-                <tr>
-                  <th>Тип</th>
-                  <th>Подвиды / Особенности</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td rowspan="2">Государственные академические</td>
-                  <td>Обычная</td>
-                </tr>
-                <tr>
-                  <td>
-                    Повышенная:
-                    <ul>
-                      <li>учебная <em>(через дирекцию Института)</em></li>
-                      <li>научно-исследовательская <em>(через национально исследовательский отдел Института)</em></li>
-                      <li>общественная <em>(через Профбюро Института)</em></li>
-                      <li>культурно-творческая <em>(через Профбюро Института)</em></li>
-                      <li>спортивная <em>(через своего тренера)</em></li>
-                    </ul>
-                  </td>
-                </tr>
-                <tr>
-                  <td rowspan="2">Государственные социальные</td>
-                  <td>Обычная</td>
-                </tr>
-                <tr>
-                  <td>Повышенная, которую могут получать:
-                    <ul>
-                      <li>обучающиеся по очной форме обучения за счёт бюджетных ассигнований федерального бюджета</li>
-                      <li>сдавшие экзамены и зачёты без троек и не имеющие академические задолженности</li>
-                      <li>лица, имеющие право на получение государственной социальной стипендии</li>
-                    </ul>
-                  </td>
-                </tr>
-                <tr>
-                  <td rowspan="3">Именные</td>
-                  <td>Президента РФ</td>
-                </tr>
-                <tr>
-                  <td>Правительства РФ</td>
-                </tr>
-                <tr>
-                  <td>Правительства Москвы</td>
-                </tr>
-                <tr>
-                  <td>От компаний</td>
-                  <td>Например, от "Т-Банка" (подробно на сайтах компаний)</td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="table-wrapper">
+              <table>
+                <caption>Виды</caption>
+                <thead>
+                  <tr>
+                    <th>Тип</th>
+                    <th>Подвиды / Особенности</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td rowspan="2">Государственные академические</td>
+                    <td>Обычная</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Повышенная:
+                      <ul>
+                        <li>учебная <em>(через дирекцию Института)</em></li>
+                        <li>научно-исследовательская <em>(через национально исследовательский отдел Института)</em></li>
+                        <li>общественная <em>(через Профбюро Института)</em></li>
+                        <li>культурно-творческая <em>(через Профбюро Института)</em></li>
+                        <li>спортивная <em>(через своего тренера)</em></li>
+                      </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td rowspan="2">Государственные социальные</td>
+                    <td>Обычная</td>
+                  </tr>
+                  <tr>
+                    <td>Повышенная, которую могут получать:
+                      <ul>
+                        <li>обучающиеся по очной форме обучения за счёт бюджетных ассигнований федерального бюджета</li>
+                        <li>сдавшие экзамены и зачёты без троек и не имеющие академические задолженности</li>
+                        <li>лица, имеющие право на получение государственной социальной стипендии</li>
+                      </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td rowspan="3">Именные</td>
+                    <td>Президента РФ</td>
+                  </tr>
+                  <tr>
+                    <td>Правительства РФ</td>
+                  </tr>
+                  <tr>
+                    <td>Правительства Москвы</td>
+                  </tr>
+                  <tr>
+                    <td>От компаний</td>
+                    <td>Например, от "Т-Банка" (подробно на сайтах компаний)</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </article>
         <article class="manual-part">
