--- a/manuals/organizations.html
+++ b/manuals/organizations.html
@@ -56,104 +56,106 @@
         <p class="about__content">Перечень подразделений вуза и их деятельность</p>
       </section>
       <section class="manual">
-        <table>
-          <caption>Таблица организаций</caption>
-          <thead>
-            <tr>
-              <th>Название</th>
-              <th>Расположение</th>
-              <th>Деятельность</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Профком обучающихся</td>
-              <td>ГУК В-301</td>
-              <td>
-                <a class="link" href="https://vk.com/@profkom_mai-chto-takoe-profkom-profsouz-i-profburo" target="_blank">
-                  Подробно
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>Волонтёрский центр</td>
-              <td>ГУК А-219 (слева от MAI STORE)</td>
-              <td>
-                <a class="link" href="https://mai.ru/campus/360/ump/volunteer" target="_blank">
-                  Подробно
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>Дирекция Института №8</td>
-              <td>ГУК А-607</td>
-              <td>
-                <ul>
-                  <li><b>Оформление документов:</b> справка с места учёбы, платное обучение, обновление индивидуальных данных, заверение документов</li>
-                  <li><b>Оформление выплат:</b> социальная стипендия, повышенная, материальная поддержка</li>
-                  <li><b>Помощь в решении других вопросов:</b> утеря пропуска, продление сессии, консультация по личным проблемам</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <td>Профбюро Института №8</td>
-              <td>ГУК А-611</td>
-              <td>
-                <a class="link" href="https://vk.com/@pb8mai-kto-takie-profburo-instituta-8-i-chem-my-zanimaemsya" target="_blank">
-                  Подробно
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>Учебное управление</td>
-              <td>ГУК В-210</td>
-              <td>
-                <a class="link" href="https://mai.ru/education/studies/uup" target="_blank">
-                  Подробно
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <td>Военно-учётный стол</td>
-              <td>
-                <a class="link" href="https://yandex.ru/maps/-/CHRTJG5p" target="_blank">
-                  улица Дубосековская, дом 5
-                </a>, комната 203
-              </td>
-              <td>Оформление справки об отсрочке</td>
-            </tr>
-            <tr>
-              <td>Учебный отдел Института №8</td>
-              <td>ГУК А-613</td>
-              <td>—</td>
-            </tr>
-            <tr>
-              <td>НИО-8</td>
-              <td>ГУК А-603</td>
-              <td>—</td>
-            </tr>
-            <tr>
-              <td>Кафедра 802</td>
-              <td>ГУК А-619</td>
-              <td>—</td>
-            </tr>
-            <tr>
-              <td>Кафедра 804</td>
-              <td>ГУК А-623</td>
-              <td>—</td>
-            </tr>
-            <tr>
-              <td>Кафедра 805</td>
-              <td>ГУК Б-321</td>
-              <td>—</td>
-            </tr>
-            <tr>
-              <td>Кафедра 806</td>
-              <td>ГУК IT-этаж</td>
-              <td>—</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="table-wrapper">
+          <table>
+            <caption>Таблица организаций</caption>
+            <thead>
+              <tr>
+                <th>Название</th>
+                <th>Расположение</th>
+                <th>Деятельность</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Профком обучающихся</td>
+                <td>ГУК В-301</td>
+                <td>
+                  <a class="link" href="https://vk.com/@profkom_mai-chto-takoe-profkom-profsouz-i-profburo" target="_blank">
+                    Подробно
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>Волонтёрский центр</td>
+                <td>ГУК А-219 (слева от MAI STORE)</td>
+                <td>
+                  <a class="link" href="https://mai.ru/campus/360/ump/volunteer" target="_blank">
+                    Подробно
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>Дирекция Института №8</td>
+                <td>ГУК А-607</td>
+                <td>
+                  <ul>
+                    <li><b>Оформление документов:</b> справка с места учёбы, платное обучение, обновление индивидуальных данных, заверение документов</li>
+                    <li><b>Оформление выплат:</b> социальная стипендия, повышенная, материальная поддержка</li>
+                    <li><b>Помощь в решении других вопросов:</b> утеря пропуска, продление сессии, консультация по личным проблемам</li>
+                  </ul>
+                </td>
+              </tr>
+              <tr>
+                <td>Профбюро Института №8</td>
+                <td>ГУК А-611</td>
+                <td>
+                  <a class="link" href="https://vk.com/@pb8mai-kto-takie-profburo-instituta-8-i-chem-my-zanimaemsya" target="_blank">
+                    Подробно
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>Учебное управление</td>
+                <td>ГУК В-210</td>
+                <td>
+                  <a class="link" href="https://mai.ru/education/studies/uup" target="_blank">
+                    Подробно
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>Военно-учётный стол</td>
+                <td>
+                  <a class="link" href="https://yandex.ru/maps/-/CHRTJG5p" target="_blank">
+                    улица Дубосековская, дом 5
+                  </a>, комната 203
+                </td>
+                <td>Оформление справки об отсрочке</td>
+              </tr>
+              <tr>
+                <td>Учебный отдел Института №8</td>
+                <td>ГУК А-613</td>
+                <td>—</td>
+              </tr>
+              <tr>
+                <td>НИО-8</td>
+                <td>ГУК А-603</td>
+                <td>—</td>
+              </tr>
+              <tr>
+                <td>Кафедра 802</td>
+                <td>ГУК А-619</td>
+                <td>—</td>
+              </tr>
+              <tr>
+                <td>Кафедра 804</td>
+                <td>ГУК А-623</td>
+                <td>—</td>
+              </tr>
+              <tr>
+                <td>Кафедра 805</td>
+                <td>ГУК Б-321</td>
+                <td>—</td>
+              </tr>
+              <tr>
+                <td>Кафедра 806</td>
+                <td>ГУК IT-этаж</td>
+                <td>—</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </section>
     </main>
     <footer class="footer">
