--- a/manuals/money.html
+++ b/manuals/money.html
@@ -67,74 +67,72 @@
                 <li><a class="link" href="https://www.mos.ru/otvet-obrazovanie/kakie-stipendii-posobiya-i-lgoty-mogut-poluchit-studenty">Страница на сайте Госуслуг Москвы</a></li>
               </ul>
             </div>
-            <table>
-              <caption>Виды</caption>
-              <thead>
-                <tr>
-                  <th>Тип</th>
-                  <th>Подвиды / Особенности</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td rowspan="6">Государственные академические</td>
-                  <td rowspan="1" colspan="2">Обычная</td>
-                </tr>
-                <tr>
-                  <td rowspan="5">Повышенная</td>
-                  <td>учебная <em>(через дирекцию Института)</em></td>
-                </tr>
-                <tr>
-                  <td>научно-исследовательская <em>(через национально исследовательский отдел Института)</em></td>
-                </tr>
-                <tr>
-                  <td>общественная <em>(через Профбюро Института)</em></td>
-                </tr>
-                <tr>
-                  <td>культурно-творческая <em>(через Профбюро Института)</em></td>
-                </tr>
-                <tr>
-                  <td>спортивная <em>(через своего тренера)</em></td>
-                </tr>
-                <tr>
-                  <td rowspan="2">Государственные социальные</td>
-                  <td colspan="2">Обычная</td>
-                </tr>
-                <tr>
-                  <td rowspan="2">Повышенная, которую могут получать:
-                    <ul>
-                      <li>обучающиеся по очной форме обучения за счёт бюджетных ассигнований федерального бюджета</li>
-                      <li>сдавшие экзамены и зачёты без троек и не имеющие академические задолженности</li>
-                      <li>лица, имеющие право на получение государственной социальной стипендии</li>
-                    </ul>
-                  </td>
-                </tr>
-                <tr>
-                  <td rowspan="3">Именные</td>
-                  <td colspan="2">Президента РФ</td>
-                </tr>
-                <tr>
-                  <td colspan="2">Правительства РФ</td>
-                </tr>
-                <tr>
-                  <td colspan="2">Правительства Москвы</td>
-                </tr>
-                <tr>
-                  <td>От компаний</td>
-                  <td rowspan="2">например, от "Т-Банка" (подробно на их сайте)</td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="table-wrapper">
+              <table>
+                <caption>Виды</caption>
+                <thead>
+                  <tr>
+                    <th>Тип</th>
+                    <th>Подвиды / Особенности</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td rowspan="2">Государственные академические</td>
+                    <td>Обычная</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Повышенная:
+                      <ul>
+                        <li>учебная <em>(через дирекцию Института)</em></li>
+                        <li>научно-исследовательская <em>(через национально исследовательский отдел Института)</em></li>
+                        <li>общественная <em>(через Профбюро Института)</em></li>
+                        <li>культурно-творческая <em>(через Профбюро Института)</em></li>
+                        <li>спортивная <em>(через своего тренера)</em></li>
+                      </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td rowspan="2">Государственные социальные</td>
+                    <td>Обычная</td>
+                  </tr>
+                  <tr>
+                    <td>Повышенная, которую могут получать:
+                      <ul>
+                        <li>обучающиеся по очной форме обучения за счёт бюджетных ассигнований федерального бюджета</li>
+                        <li>сдавшие экзамены и зачёты без троек и не имеющие академические задолженности</li>
+                        <li>лица, имеющие право на получение государственной социальной стипендии</li>
+                      </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td rowspan="3">Именные</td>
+                    <td>Президента РФ</td>
+                  </tr>
+                  <tr>
+                    <td>Правительства РФ</td>
+                  </tr>
+                  <tr>
+                    <td>Правительства Москвы</td>
+                  </tr>
+                  <tr>
+                    <td>От компаний</td>
+                    <td>Например, от "Т-Банка" (подробно на сайтах компаний)</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </article>
         <article class="manual-part">
           <h2 class="manual-part__title">Материальная поддержка</h2>
           <div class="manual-part__content">
-            <p>
+            <div>
               Материальная поддержка — особая социальная выплата студенту в качестве помощи при особых жизненных
               обстоятельствах. Существует 3 вида материальной помощи, которые не зависят друг от друга.
-            </p>
-            <p>
+            </div>
+            <div>
               <h3>1️⃣ Остронуждающимся студентам <em>(АПОС, "3600")</em></h3>
               <ul>
                 <li>Могут получать все студенты вне зависимости от членства в Профсоюзе.</li>
@@ -145,8 +143,8 @@
                 <li>Пакет документов можно подать лично сотруднику Профбюро или оставить в ящике на двери кабинета.</li>
                 <li>Подробно <a class="link" href="https://mai.ru/campus/360/welfare">на сайте МАИ</a>.</li>
               </ul>
-            </p>
-            <p>
+            </div>
+            <div>
               <h3>2️⃣ Обучающимся МАИ <em>("большая")</em></h3>
               <ul>
                 <li>Могут получать все студенты вне зависимости от членства в Профсоюзе.</li>
@@ -154,8 +152,8 @@
                 <li>Заявление можно подать только лично сотруднику Профбюро, так как необходима регистрация в журнале подачи.</li>
                 <li>Подробно <a class="link" href="https://mai.ru/campus/360/welfare">на сайте МАИ</a>.</li>
               </ul>
-            </p>
-            <p>
+            </div>
+            <div>
               <h3>3️⃣ Членам Профсоюза</h3>
               <ul>
                 <li>Могут получать только студенты, состоящие в Профсоюзе. Особенно актуальна для тех, кто попал в тяжёлые непредвиденные обстоятельства. </li>
@@ -163,8 +161,8 @@
                 <li>Заявления и документы принимает бухгалтерия Профкома МАИ.</li>
                 <li>Подробно <a class="link" href="https://vk.com/@profkom_mai-vse-pro-materialnuu-pomosch">в статье в сообществе ВКонтакте Профкома МАИ</a>.</li>
               </ul>
-            </p>
-            <p>
+            </div>
+            <div>
               <h3>📖 Алгоритмы получения</h3>
               <ul>
                 <li>
@@ -178,7 +176,7 @@
                 </li>
                 <li><b>Членам Профсоюза</a>:</b> обратиться к сотрудникам социальной комиссии.</li>
               </ul>
-            </p>
+            </div>
           </div>
         </article>
       </section>
