Fix markup and styles of burger menu

--- a/index.html
+++ b/index.html
@@ -14,26 +14,8 @@
         <span class="header__logo-description">Сборник материалов для маёвца</span>
       </a>
       <nav class="header__menu">
-        <div class="burger">
-          <input class="burger__checkbox" id="burger-checkbox" type="checkbox"/>
-          <label class="burger__label" for="burger-checkbox"></label>
-          <div class="burger__list-wrapper">
-            <ul class="burger__list">
-              <li class="burger__item">
-                <a class="burger__link" href="./services.html">Сервисы</a>
-              </li>
-              <li class="burger__item">
-                <a class="burger__link" href="./organizations.html">Организации</a>
-              </li>
-              <li class="burger__item">
-                <a class="burger__link" href="./manuals.html">Справочники</a>
-              </li>
-              <li class="burger__item">
-                <a class="burger__link" href="./self-education.html">Самообразование</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        <input class="header__burger-checkbox" id="burger-checkbox" type="checkbox"/>
+        <label class="header__burger-button" for="burger-checkbox"></label>
         <ul class="header__menu-list">
           <li class="header__menu-item">
             <a class="header__menu-link" href="./services.html">Сервисы</a>
