--- a/manuals/money.html
+++ b/manuals/money.html
@@ -210,7 +210,7 @@
         </p>
       </section>
       <p class="warning">
-        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительных характер.
+        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительный характер.
       </p>
     </footer>
   </body>
