--- a/services.html
+++ b/services.html
@@ -201,7 +201,7 @@
         </p>
       </section>
       <p class="warning">
-        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительных характер.
+        Сервис не является официальным ресурсом Московского авиационного института и имеет ознакомительный характер.
       </p>
     </footer>
   </body>
