Update address of the "Voshod" branch of MAI

--- a/organizations.html
+++ b/organizations.html
@@ -1167,7 +1167,7 @@
               </div>
               <div class="card__text-wrapper">
                 <h3 class="card__title">Восход</h3>
-                <span class="card__description">город Байконур</span>
+                <span class="card__description">Республика Казахстан, город Байконур</span>
               </div>
             </a>
           </article>
