Update names of links in "money" manual

--- a/manuals/money.html
+++ b/manuals/money.html
@@ -44,9 +44,9 @@
             <div>
               <h3>Ресурсы</h3>
               <ul>
-                <li><a class="link" href="https://mai.ru/education/studies/scholarship">Страница №1 на сайте МАИ</a></li>
-                <li><a class="link" href="https://mai.ru/sveden/grants">Страница №2 на сайте МАИ</a></li>
-                <li><a class="link" href="https://www.mos.ru/otvet-obrazovanie/kakie-stipendii-posobiya-i-lgoty-mogut-poluchit-studenty">Страница на сайте Госуслуг Москвы</a></li>
+                <li><a class="link" href="https://mai.ru/education/studies/scholarship">Подробно (1)</a></li>
+                <li><a class="link" href="https://mai.ru/sveden/grants">Подробно (2)</a></li>
+                <li><a class="link" href="https://www.mos.ru/otvet-obrazovanie/kakie-stipendii-posobiya-i-lgoty-mogut-poluchit-studenty">Подробно (3)</a></li>
               </ul>
             </div>
             <div class="table-wrapper">
