--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
             <a class="header__menu-link" href="./organizations.html">Организации</a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-link" href="./manuals.html">Справочники</a>
+            <a class="header__menu-link" href="./manuals.html">Справочник</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="./self-education.html">Самообразование</a>
